--- a/src/resources/stylesheets/abstracts/_variables.scss
+++ b/src/resources/stylesheets/abstracts/_variables.scss
@@ -2,6 +2,7 @@
 $primary-font: Montserrat;
 
 $background-color: #ffffff;
+$secondary-bg-color: #f5f5f9;
 $text-color: #000000;
 
 //button
@@ -11,3 +12,12 @@ $btn-success: #0abf30;
 $btn-error: #e24d4c;
 $btn-warning: #e9bd0c;
 $btn-info: #3498db;
+
+$btn-active: #1f9254;
+$bg-active: #ebf9f1;
+$btn-delete: #a30d11;
+$bg-inactive: #fbe7e8;
+$btn-add: #624de3;
+$dark-row: #f7f6fe;
+
+$border-color: #9e9e9e;
