--- a/src/resources/stylesheets/base/_typography.scss
+++ b/src/resources/stylesheets/base/_typography.scss
@@ -6,7 +6,7 @@
 }
 
 body {
-  background-color: $background-color;
+  background-color: $secondary-bg-color;
   font-weight: 400;
   font-size: 1rem;
   line-height: 24px;
