--- a/src/resources/stylesheets/components/_modal.scss
+++ b/src/resources/stylesheets/components/_modal.scss
@@ -1,7 +1,7 @@
 @use '../abstracts' as *;
 
 .modal {
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -69,4 +69,9 @@
 i {
   font-size: 14px;
   cursor: pointer;
+}
+
+.book-form > input.invalid {
+  border-color: $btn-error;
+  background-color: $bg-inactive;
 }
